--- a/src/app/modules/checklist/forklift.checklist.component.html
+++ b/src/app/modules/checklist/forklift.checklist.component.html
@@ -1,82 +1,101 @@
+<div style="padding: 10px; height: 100%;" fxLayout="row" fxLayoutAlign="space-around stretch">
+  <div fxLayout="column" fxLayoutAlign="start stretch" style="padding: 10px; width: 35%;">
+      <h3><b>Filters</b></h3>
+    <!-- <div> -->
+      <mat-form-field>
+        <mat-label>State</mat-label>
+        <mat-select (selectionChange)="filterState($event)" [(ngModel)]="selectedState">
+          <mat-option value="" selected>
+            All States
+          </mat-option>
+          <mat-option *ngFor="let state of states" [value]="state">
+            {{state}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    <!-- </div> -->
 
-<div style="padding: 20px;" fxLayout="column" fxFlexLayout="center space-around">
-  <div fxLayout="row" fxFlexLayout="space-around center">
-    <mat-form-field style="width: 33%; margin: 10px;">
-      <mat-label>State</mat-label>
-      <mat-select (selectionChange)="filterState($event)" [(ngModel)]="selectedState">
-        <mat-option value="All" selected>
-          All States
-        </mat-option>
-        <mat-option value="NSW">
-          NSW
-        </mat-option>
-        <mat-option value="QLD">
-          QLD
-        </mat-option>
-        <mat-option value="VIC">
-          VIC
-        </mat-option>
-        <mat-option value="WA">
-          WA
-        </mat-option>
-        <mat-option value="STAU">
-          STAU
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+    <!-- <div fxLayout="column" fxLayoutAlign="space-between stretch"> -->
+      <!-- <mat-form-field>
+        <mat-label>Checklist</mat-label>
+        <mat-select (selectionChange)="filterChecklist($event)" [(ngModel)]="selectedChecklist">
+          <mat-option *ngFor="let checklist of checklists" [value]="checklist">
+            {{checklist.displayValue}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field> -->
+    <!-- </div> -->
+    <div fxLayout="column" fxLayoutAlign="space-between stretch">
+      <h3><b>Period</b></h3>
+      <!-- <mat-list>
+        <mat-list-item *ngFor="let option of selectedOption; let index=index">
+          <h3 matLine> {{option.displayValue}} </h3>
+          <button mat-icon-button (click)="removeOption(index)" type="button">
+            <mat-icon>close</mat-icon>
+          </button>
+        </mat-list-item>
+      </mat-list> -->
 
-    <mat-form-field style="width: 33%; margin: 10px;">
-      <mat-label>Period</mat-label>
-      <mat-select (selectionChange)="filter($event)" [(ngModel)]="selectedOption">
-        <mat-option value="7" selected>
-          7 days
-        </mat-option>
-        <mat-option value="14">
-          14 days
-        </mat-option>
-        <mat-option value="30">
-          30 days
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>Date Range</mat-label>
+        <mat-select 
+          [formControl]="optionsDaily" 
+          (selectionChange)="filterOptionList($event)"
+          [(ngModel)]="selectedOptionDaily" 
+          [errorStateMatcher]="matcherDaily">
+          <mat-option *ngFor="let period of periods" [value]="period">
+            {{ period.displayValue }}
+          </mat-option>
+        </mat-select>
+        <mat-error *ngIf="optionsDaily.hasError('required')">Must select a date range to display.</mat-error>
+      </mat-form-field>
+    </div>
+    
   </div>
 
+  <div style="width: 100%; padding: 10px;">
+    <h2>Daily Forklift Pre-start Checklist Compliance</h2>
+    <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
+    <table style="width: 100%;" mat-table matSort matSortActive="compliance" matSortDirection="desc" [dataSource]="dataSource" class="mat-elevation-z8">
 
-  <h2>Forklift Checklist Compliance</h2>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="state">
+        <th style="width: 20%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> State </th>
+        <td style="width: 20%!important;" mat-cell *matCellDef="let element"> {{element.location}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="location">
-      <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef> Location </th>
-      <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.location}} </td>
-    </ng-container>
+      <ng-container matColumnDef="forklift">
+        <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Forklift </th>
+        <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.forklift}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="forklift">
-      <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef> Forklift No. </th>
-      <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.forklift}} </td>
-    </ng-container>
+      <ng-container matColumnDef="address">
+        <th style="width: 25%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Branch </th>
+        <td style="width: 25%!important;" mat-cell *matCellDef="let element"> {{element.address}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="timesChecked">
-      <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef> Times Checked </th>
-      <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.timesChecked}} </td>
-    </ng-container>
+      <ng-container matColumnDef="timesChecked">
+        <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Times Checked </th>
+        <td style="width: 10%!important; padding-left: 20px;" mat-cell *matCellDef="let element"> {{element.timesChecked}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="timesCompliant">
-      <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef> Times Compliant </th>
-      <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.timesCompliant}} </td>
-    </ng-container>
+      <ng-container matColumnDef="timesCompliant">
+        <th style="width: 12%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Times Compliant </th>
+        <td style="width: 12%!important; padding-left: 20px;" mat-cell *matCellDef="let element"> {{element.timesCompliant}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="compliance">
-      <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef> Compliance </th>
-      <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.compliance}} </td>
-    </ng-container>
+      <ng-container matColumnDef="compliance">
+        <th style="width: 8%!important;" mat-header-cell *matHeaderCellDef mat-sort-header="compliance"> Compliance </th>
+        <td style="width: 8%!important; padding-left: 20px;" mat-cell *matCellDef="let element"> {{element.compliance}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="timesCritical">
-      <th style="width: 15%!important;" mat-header-cell *matHeaderCellDef> Times with Critical </th>
-      <td style="width: 15%!important;" mat-cell *matCellDef="let element"> {{element.timesCritical}} </td>
-    </ng-container>
+      <ng-container matColumnDef="timesCritical">
+        <th style="width: 10%!important;" mat-header-cell *matHeaderCellDef mat-sort-header> Times with Critical </th>
+        <td style="width: 10%!important; padding-left: 20px;" mat-cell *matCellDef="let element"> {{element.timesCritical}} </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  <mat-paginator #paginator1 class="mat-elevation-z8" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator class="mat-elevation-z8" #paginator [pageSizeOptions]="[10, 20, 40, dataSource.data.length]" showFirstLastButtons></mat-paginator>
+  </div>
 </div>
