--- a/src/app/modules/settings/settings.component.html
+++ b/src/app/modules/settings/settings.component.html
@@ -1,1 +1,4 @@
-<p>settings works!</p>
+<div>
+  <input  (change)="fileChange($event)"  type="file"  class="custom-file-input"  id="inputGroupFile01"  aria-describedby="inputGroupFileAddon01">
+  <span  class="input-group-text upload"  (click)="upload()"  id="btnUpload">Upload</span>
+</div>
