--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
+<div *ngIf="loading" class="spinner-border spinner-border-sm"></div>
+<!-- <ul *ngIf="users">
+    <li *ngFor="let user of users">{{user.firstName}} {{user.lastName}}</li>
+</ul> -->
+
 <div style="padding: 10px; height: 100%;" fxLayout="row" fxFlexLayout="space-around center">
   <div fxFlex="80">
     <div style="display: block; position: relative; height: 20vh;">
