--- a/src/app/modules/notvisited/not.visited.component.html
+++ b/src/app/modules/notvisited/not.visited.component.html
@@ -1,4 +1,4 @@
-
+<mat-progress-bar mode="indeterminate" color="accent" *ngIf="loading"></mat-progress-bar>
 <div style="padding: 20px;" fxLayout="column" fxFlexLayout="center space-around">
   <h2>> 7 Days</h2>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
