--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <!-- <ul *ngIf="users">
     <li *ngFor="let user of users">{{user.firstName}} {{user.lastName}}</li>
 </ul> -->
-
+<mat-progress-bar mode="indeterminate" color="accent" *ngIf="loading"></mat-progress-bar>
 <div style="padding: 10px; height: 100%;" fxLayout="row" fxFlexLayout="space-around center">
   <div fxFlex="80">
     <div style="display: block; position: relative; height: 20vh;">
