--- a/src/app/modules/checklist/warehouse.checklist.component.html
+++ b/src/app/modules/checklist/warehouse.checklist.component.html
@@ -4,7 +4,7 @@
     <!-- <div> -->
       <mat-form-field>
         <mat-label>State</mat-label>
-        <mat-select (selectionChange)="filterState($event)" [disabled]="isLoading" [(ngModel)]="selectedState">
+        <mat-select (selectionChange)="filterState($event)" [disabled]="isLoading || currentUserRole == 'state'" [(ngModel)]="selectedState">
           <mat-option value="" selected>
             All States
           </mat-option>
