--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,4 +1,4 @@
-﻿<div class="col-md-6 offset-md-3 mt-5">
+﻿<!-- <div class="col-md-6 offset-md-3 mt-5">
     <div class="card">
         <h4 class="card-header">Angular 8 JWT Login Example</h4>
         <div class="card-body">
@@ -25,4 +25,47 @@
             </form>
         </div>
     </div>
+</div> -->
+
+<div style="padding: 10px; height: 100%;" fxLayout="column" fxLayoutAlign="space-around center">
+    <mat-card style="width: 33%;">
+        <mat-card-content>
+            <div fxLayout="column" fxLayoutAlign="space-around stretch">
+                <h1>Login</h1>
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" (keydown)="keyDownFunction($event)" fxLayout="column" fxLayoutAlign="space-around stretch">
+                    <mat-form-field appearance="standard">
+                        <mat-label>Username</mat-label>
+                        <input matInput formControlName="username" placeholder="Username" required>
+                        <!-- <mat-icon matPrefix>account_circle</mat-icon> -->
+                        <mat-error *ngIf="f.username.errors" class="invalid-feedback">
+                            Username is required
+                        </mat-error>
+                        <!-- <mat-hint></mat-hint> -->
+                    </mat-form-field>
+                    <mat-form-field appearance="standard">
+                        <mat-label>Enter your password</mat-label>
+                        <input matInput formControlName="password" [type]="hide ? 'password' : 'text'">
+                        <!-- <mat-icon matPrefix>vpn_key</mat-icon> -->
+                        <button tabindex="-1" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+
+                        <mat-error *ngIf="f.password.errors" class="invalid-feedback">
+                            Password is required
+                        </mat-error>
+                    </mat-form-field>
+                    <br>
+                    <button 
+                      mat-raised-button 
+                      color="primary" 
+                      style="float: right;"
+                      [disabled]="loading">
+                      Login
+                    </button>
+                    <br>
+                    <div color="accent" *ngIf="error" class="alert alert-danger">{{error}}</div>
+                </form>
+            </div>
+        </mat-card-content>
+    </mat-card>
 </div>
