--- a/src/app/modules/sidebar/sidebar.component.html
+++ b/src/app/modules/sidebar/sidebar.component.html
@@ -5,12 +5,15 @@
           <mat-icon>menu</mat-icon>
         </button>
         <h1 class="app-name">{{ navbarText }}</h1>
+        <span style="flex: 1 1 auto;"></span>
+        <h3>{{ getUserDisplay() }}</h3>
+        <mat-icon style="margin-left: 16px;">account_circle</mat-icon>
     </mat-toolbar>
 
     <mat-sidenav-container class="sidenav-container">
       <mat-sidenav #snav>
         <div style="height: 100%;" fxLayout="column" fxLayoutAlign="space-between stretch">
-          <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree" style="margin: 10px;">
+          <mat-tree #tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree" style="margin: 10px;">
             <!-- This is the tree node template for leaf nodes -->
             <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
               <!-- <mat-nav-list [ngClass]="{'sidenavitem-selected': node.selected==true}"> -->
@@ -25,7 +28,7 @@
             </mat-tree-node>
             <!-- This is the tree node template for expandable nodes -->
             <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
-              <li>
+              <li *ngIf="hasAccess(node)">
                 <div class="mat-tree-node">
                   <!-- <button mat-icon-button matTreeNodeToggle
                           [attr.aria-label]="'toggle ' + node.name">
@@ -54,7 +57,7 @@
             </mat-nested-tree-node>
           </mat-tree>
           <div style="margin: 10px;">
-            <button mat-button style="text-align: left; width: 100%;" (click)="snav.toggle(); openSettings()">
+            <button *ngIf="isUserAdmin()" mat-button style="text-align: left; width: 100%;" (click)="snav.toggle(); openSettings()">
               <mat-icon>settings</mat-icon>
               Settings
             </button>
